<resources>
    <string name="app_name">MovieDB</string>
    <string name="retry">Retry</string>
    <string name="no_results_found">No results found</string>
    <string name="search_instructions">Press the magnifying glass to start searching</string>
    <string name="no_watchlist">You have nothing on your watchlist</string>
    <string name="could_not_refresh">Could not refresh: %s</string>
    <string name="unknown_error_occurred">An unknown error has occurred</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="watchlist">Watchlist</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search the database</string>
    <string name="title_watchlist">Your watchlist</string>
    <string name="delete_watchlist">Delete watchlist</string>
    <string name="search_the_database">Search the database</string>
    <string name="could_not_load_search_results">Could not load search results: %s</string>
    <string name="directed_by">DIRECTED BY</string>
    <string name="trailer"><u>TRAILER</u></string>
    <string name="cast_crew">CAST + CREW</string>
    <string name="details">DETAILS</string>
    <string name="genre">GENRE</string>
    <string name="reviews">Reviews</string>
    <string name="status">STATUS</string>
    <string name="release_date">RELEASE DATE</string>
    <string name="budget">BUDGET</string>
    <string name="no_homepage_available">No homepage available...</string>
    <string name="no_trailer_available">No trailer available...</string>
    <string name="homepage"><u>HOMEPAGE</u></string>
    <string name="recommended">Recommended</string>
    <string name="cast">CAST</string>
    <string name="crew">CREW</string>
    <string name="top_rated_movies">TOP RATED MOVIES</string>
    <string name="popular_movies">POPULAR MOVIES</string>
    <string name="top_tv_shows">TOP TV SHOWS</string>
    <string name="popular_tv_shows">POPULAR TV SHOWS</string>
    <string name="genres">GENRES</string>
    <string name="born">BORN </string>
    <string name="known_for">KNOWN FOR </string>
    <string name="as_actor">AS ACTOR</string>
    <string name="as_crew">AS CREW</string>
    <string name="trending">TRENDING</string>
</resources>