<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?android:attr/actionBarSize">

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_view_top_movies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:text="@string/top_rated_movies"
                    android:visibility="invisible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_top_movies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_view_top_movies"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:id="@+id/text_view_popular_movies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/recycler_view_top_movies"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:text="@string/popular_movies"
                    android:visibility="invisible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_popular_movies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_view_popular_movies"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:id="@+id/text_view_top_tv_shows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/recycler_view_popular_movies"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:text="@string/top_tv_shows"
                    android:visibility="invisible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_top_tv_shows"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_view_top_tv_shows"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:id="@+id/text_view_popular_tv_shows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/recycler_view_top_tv_shows"
                    android:layout_marginStart="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:text="@string/popular_tv_shows"
                    android:visibility="invisible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_popular_tv_shows"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_view_popular_tv_shows"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:id="@+id/text_view_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/button_retry"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_horizontal"
                    android:visibility="gone"
                    tools:text="An error occurred"
                    tools:visibility="visible" />

                <Button
                    android:id="@+id/button_retry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/retry"
                    android:visibility="gone"
                    tools:visibility="visible" />

            </RelativeLayout>

        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>