<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="@android:color/transparent"
        app:elevation="0dp"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="?attr/actionBarTheme" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_view_backdrop"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/image_view_poster"
                android:layout_width="120dp"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_view_backdrop"
                tools:srcCompat="@tools:sample/avatars"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/text_view_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toStartOf="@+id/image_view_poster"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/image_view_poster"
                tools:text="title"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/text_view_directed_by"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/directed_by"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/text_view_director"
                app:layout_constraintEnd_toStartOf="@+id/image_view_poster"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/text_view_director"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/text_view_rating"
                app:layout_constraintEnd_toStartOf="@+id/image_view_poster"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_title"
                tools:text="Director"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/text_view_release_date_runtime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/text_view_rating"
                app:layout_constraintEnd_toStartOf="@+id/text_view_trailer"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_director"
                tools:text="2022 - 120 min"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/text_view_trailer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/trailer"
                android:textSize="16sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/text_view_rating"
                app:layout_constraintEnd_toStartOf="@+id/image_view_poster"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_view_release_date_runtime"
                app:layout_constraintTop_toBottomOf="@+id/text_view_director"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/text_view_tagline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintEnd_toStartOf="@+id/text_view_rating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_view_rating"
                tools:text="Tagline"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/text_view_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="3"
                android:transitionName="overview"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_tagline"
                tools:text="overview"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/text_view_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/image_view_poster"
                app:layout_constraintStart_toStartOf="@+id/image_view_poster"
                app:layout_constraintTop_toBottomOf="@+id/image_view_poster"
                tools:text="rating"
                tools:visibility="visible" />

            <View
                android:id="@+id/view_overview_container"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/image_view_expand"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_view_overview" />

            <ImageView
                android:id="@+id/image_view_expand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_overview"
                app:srcCompat="@drawable/ic_baseline_more_horiz_24"
                app:tint="@color/white" />


            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/toolbar"
                android:backgroundTint="@color/background"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_view_expand"
                app:tabTextColor="@color/white"
                tools:visibility="visible">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cast_crew" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre" />
            </com.google.android.material.tabs.TabLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tab_layout" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_crew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycler_view_cast" />

            <TextView
                android:id="@+id/text_view_status_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tab_layout" />

            <TextView
                android:id="@+id/text_view_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_status_text"
                tools:text="Status" />

            <TextView
                android:id="@+id/text_view_release_date_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_status" />

            <TextView
                android:id="@+id/text_view_release_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_release_date_text"
                tools:text="Status" />


            <TextView
                android:id="@+id/text_view_homepage_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/homepage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_release_date" />

            <TextView
                android:id="@+id/text_view_homepage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_homepage_text"
                tools:text="Homepage" />

            <TextView
                android:id="@+id/text_view_budget_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/budget"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_homepage" />

            <TextView
                android:id="@+id/text_view_budget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_budget_text"
                tools:text="Budget" />

            <TextView
                android:id="@+id/text_view_genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Genres"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tab_layout" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_genres" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group_cast_crew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="recycler_view_crew,recycler_view_cast" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="text_view_genres, recycler_view_genres" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="text_view_homepage,text_view_budget,text_view_status,text_view_release_date,text_view_budget_text,text_view_homepage_text,text_view_release_date_text,text_view_status_text" />


            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="recycler_view_crew,recycler_view_genres, text_view_budget" />

            <TextView
                android:id="@+id/text_view_recommended"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recommended"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_recommended"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_recommended" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>